# computer_animation_project

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  app.py  docker-bake.hcl  loader.py  pyproject.toml  requirements.txt  run.sh  test.html
.devcontainer/: devcontainer.json
_fix/: pyproject.toml
pages/: dataset.py  home copy.py  home.py
