[project]
name = "computer-animation-project"
version = "0.1.0"
description = ""
authors = [
    {name = "yoni_ash",email = "yonatha12345678910@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair (>=5.5.0,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "numpy (>=2.2.5,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
