[project]
name = "computer-animation-project"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "yoni_ash",email = "yonatha12345678910@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.1"
nbconvert = "^7.16.6"

